--- a/integrationTests/configurations/node18-linux/package.json
+++ b/integrationTests/configurations/node18-linux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node12-windows",
+  "name": "node18-linux",
   "version": "1.0.0",
   "description": "Azure Functions sample for the Serverless framework",
   "scripts": {
