Only run tag if new version on the main repo, not on forks

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -194,6 +194,7 @@ jobs:
   tag-if-new-version:
     runs-on: ubuntu-latest
     needs: [node-integration-tests, python-integration-tests]
+    if: github.repository_owner == 'serverless'
 
     steps:
       - name: Checkout repository
