chore: update `@typescript-eslint` dependencies to v2

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean:int": "rm -rf integrationTests/configurations/**/.serverless integrationTests/configurations/**/node_modules integrationTests/configurations/**/local.settings.json",
     "pretest:int": "npm run clean:int",
     "test:int": "clvr",
-    "compile": "tsc",
+    "compile": "tsc -p tsconfig.build.json",
     "prebuild": "shx rm -rf lib/ && npm run test",
     "build": "npm run compile",
     "generate:spn": "bash ./scripts/generate-service-principal.sh",
@@ -78,8 +78,8 @@
     "@types/serverless": "^1.18.2",
     "@types/xml": "^1.0.3",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "acorn": "^7.0.0",
     "axios-mock-adapter": "^1.16.0",
     "babel-jest": "^24.8.0",
