--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/jsonpath": "^0.2.0",
     "@types/mock-fs": "^3.6.30",
     "@types/request": "^2.48.1",
+    "@types/rimraf": "^2.0.5",
     "@types/serverless": "^1.18.2",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
