--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@azure/ms-rest-js": "^1.8.7",
     "@babel/runtime": "^7.4.5",
     "@types/cross-spawn": "^6.0.2",
+    "@types/deep-equal": "^1.0.1",
     "@types/jest": "^24.0.13",
     "@types/jsonpath": "^0.2.0",
     "@types/mock-fs": "^3.6.30",
