--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^24.0.13",
+    "@types/js-yaml": "^3.12.7",
     "@types/jsonpath": "^0.2.0",
     "@types/mock-fs": "^3.6.30",
     "@types/request": "^2.48.1",
