NodeJS20-UT-Fix

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "js-yaml": "^3.13.1",
     "jsonpath": "^1.0.1",
     "md5": "^2.2.1",
+    "memfs": "^4.9.1",
     "open": "^6.3.0",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
@@ -90,7 +91,7 @@
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-os-detection": "^1.1.1",
-    "mock-fs": "^4.10.0",
+    "mock-fs": "^4.14.0",
     "mock-spawn": "^0.2.6",
     "serverless": "^1.44.1",
     "shx": "^0.3.2",
